// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CalendarHead/> props onPrev, onNext correctly 1`] = `
<CalendarHead
  nextIcon={true}
  onNext={[Function]}
  onPrev={[Function]}
  prevIcon={true}
  title=""
>
  <div
    className="calendar__head"
  >
    <div
      className="calendar__head--prev"
    >
      <button
        className="calendar__head--button"
        onClick={[Function]}
      >
        <i
          className="icon-navigate_before"
        />
      </button>
    </div>
    <h2
      className="calendar__head--title"
    />
    <div
      className="calendar__head--next"
    >
      <button
        className="calendar__head--button"
        onClick={[Function]}
      >
        <i
          className="icon-navigate_next"
        />
      </button>
    </div>
  </div>
</CalendarHead>
`;

exports[`<CalendarHead/> props prevIcon, nextIcon correctly 1`] = `
<CalendarHead
  nextIcon={true}
  prevIcon={true}
  title=""
>
  <div
    className="calendar__head"
  >
    <div
      className="calendar__head--prev"
    >
      <button
        className="calendar__head--button"
      >
        <i
          className="icon-navigate_before"
        />
      </button>
    </div>
    <h2
      className="calendar__head--title"
    />
    <div
      className="calendar__head--next"
    >
      <button
        className="calendar__head--button"
      >
        <i
          className="icon-navigate_next"
        />
      </button>
    </div>
  </div>
</CalendarHead>
`;

exports[`<CalendarHead/> props title correctly 1`] = `
<div
  className="calendar__head"
>
  <div
    className="calendar__head--prev"
  />
  <h2
    className="calendar__head--title"
  >
    2019/01
  </h2>
  <div
    className="calendar__head--next"
  />
</div>
`;

exports[`<CalendarHead/> renders CalendarHead with no props 1`] = `
<div
  className="calendar__head"
>
  <div
    className="calendar__head--prev"
  />
  <h2
    className="calendar__head--title"
  />
  <div
    className="calendar__head--next"
  />
</div>
`;
